video size fix on mobile

--- a/src/static/tailwind.css
+++ b/src/static/tailwind.css
@@ -527,9 +527,6 @@
   .invisible {
     visibility: hidden;
   }
-  .visible {
-    visibility: visible;
-  }
   .absolute {
     position: absolute;
   }
@@ -692,6 +689,15 @@
   .min-w-48 {
     min-width: calc(var(--spacing) * 48);
   }
+  .flex-0 {
+    flex: 0;
+  }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
+  .flex-shrink-0 {
+    flex-shrink: 0;
+  }
   .border-collapse {
     border-collapse: collapse;
   }
@@ -706,6 +712,9 @@
   }
   .resize {
     resize: both;
+  }
+  .grid-cols-\[100\%\] {
+    grid-template-columns: 100%;
   }
   .grid-cols-\[repeat\(auto-fill\,minmax\(250px\,1fr\)\)\] {
     grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
@@ -898,6 +907,11 @@
   .sm\:grid-cols-\[repeat\(auto-fill\,minmax\(25\%\,1fr\)\)\] {
     @media (width >= 40rem) {
       grid-template-columns: repeat(auto-fill,minmax(25%,1fr));
+    }
+  }
+  .sm\:grid-cols-\[repeat\(auto-fill\,minmax\(250px\,1fr\)\)\] {
+    @media (width >= 40rem) {
+      grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
     }
   }
   .sm\:items-center {
